1999-03-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (add_view_cb, cursor_moved_cb): new functions to
	display the cursor offset in the statusbar.
	(main): connect add_view_cb to MDI add_view signal.
	* ghex.h: declare offset_base.
	* preferences.c: add an option menu for selecting the base
	for cursor offset displaying (hex or decimal).
	* config.c: load and save offset base prefs.
	
1999-02-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): leave freeing stuff to
	destroy handler. thanx to Pavel Machek for reporting this.
	
1999-02-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): only create a new document
	if the file is a regular one (S_ISREG == 1).
	* gtkhex.c (recalc_displays, gtk_hex_size_request): use our own
	requisition instead of scrollbar's one for determining the size
	requested by the scrollbar in order to prevent GTK warnings.

1999-02-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (customize_app_cb, app_drop_cb): added DnD support to open
	files dragged to ghex.

1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* ghex.desktop: Added Korean translations.

1999-01-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c: Do not crash if we dont find the translation.

	* ghex.h (GROUP_MENU_PATH): Sync the string to the actual item we
	have on the menu. 

1999-01-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.[ch]: removed. contents moved to the following files:
	* preferences.c: put all the prefs stuff here.
	* findreplace.c: find/replace and goto code.
	* converter.c: conversion dialog code.
	* main.c: put MDI signal handlers here.
	* ui.c: only global menus and ui utility functions
	remain here.
	* gnome-support.c: becomes session.c.
	* gnome-support.h: removed. contents moved to ghex.h.
	
1999-01-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.h, config.c (guint max_undo_depth): global max undo depth
	for edited files.